Fix overlap in search-room page #59

--- a/src/components/checkbox-list/checkbox-list.scss
+++ b/src/components/checkbox-list/checkbox-list.scss
@@ -35,7 +35,6 @@
 
   &__content {
     display: none;
-    position: absolute;
     padding-left: 0;
     padding-top: 1.0625rem;
     margin: 0;
